--- a/Final.tex
+++ b/Final.tex
@@ -675,7 +675,7 @@ And we are going to visualize it like Figure 1 below:
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{Final_files/figure-latex/unnamed-chunk-7-1.pdf}
+\begin{center}\includegraphics{Final_files/figure-latex/unnamed-chunk-7-1} \end{center}
 
 \hypertarget{density-plot}{%
 \paragraph{Density Plot}\label{density-plot}}
@@ -698,7 +698,7 @@ more intuitive:
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{Final_files/figure-latex/unnamed-chunk-8-1.pdf}
+\begin{center}\includegraphics{Final_files/figure-latex/unnamed-chunk-8-1} \end{center}
 
 Since we used simulated data for verification, we can find in Figure 2
 that the two genders are the same on the image. But by observing the
@@ -730,8 +730,9 @@ votes, we can use:
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{Final_files/figure-latex/unnamed-chunk-9-1.pdf} The
-result Figure 3 also reflects the similarity of the two simulation
+\begin{center}\includegraphics{Final_files/figure-latex/unnamed-chunk-9-1} \end{center}
+
+The result Figure 3 also reflects the similarity of the two simulation
 variables, which verifies the effectiveness of the method.
 
 \hypertarget{one-variable-in-different-groups}{%
@@ -749,8 +750,9 @@ groups, we can use:
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{Final_files/figure-latex/unnamed-chunk-10-1.pdf} Same
-as before, the result Figure 4 also reflects the similarity of the
+\begin{center}\includegraphics{Final_files/figure-latex/unnamed-chunk-10-1} \end{center}
+
+Same as before, the result Figure 4 also reflects the similarity of the
 simulation data of different groups.
 
 \hypertarget{regression-plot}{%
@@ -766,9 +768,11 @@ established before for diagnosis, and use the diagnosis method in the
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{Final_files/figure-latex/unnamed-chunk-11-1.pdf}
-\includegraphics{Final_files/figure-latex/unnamed-chunk-11-2.pdf}
-\includegraphics{Final_files/figure-latex/unnamed-chunk-11-3.pdf}
+\begin{center}\includegraphics{Final_files/figure-latex/unnamed-chunk-11-1} \end{center}
+
+\begin{center}\includegraphics{Final_files/figure-latex/unnamed-chunk-11-2} \end{center}
+
+\begin{center}\includegraphics{Final_files/figure-latex/unnamed-chunk-11-3} \end{center}
 
 Looking at the figures, you can find that such a regression image can be
 more useful in real application scenarios.
@@ -888,7 +892,7 @@ Survey Link:
 \begin{figure}
 \centering
 \includegraphics{./screenshot.PNG}
-\caption{screenshot}
+\caption{Screenshot}
 \end{figure}
 
 \end{document}
