--- a/Final.tex
+++ b/Final.tex
@@ -424,6 +424,8 @@ bias, the data generated is as even as possible.
   \DataTypeTok{majority =} \KeywordTok{sample}\NormalTok{(}\KeywordTok{c}\NormalTok{(}\StringTok{'LIB'}\NormalTok{,}\StringTok{'CON'}\NormalTok{),}\DecValTok{10000}\NormalTok{,}\DataTypeTok{replace =}\NormalTok{ T,}\DataTypeTok{prob =} \KeywordTok{c}\NormalTok{(}\FloatTok{0.85}\NormalTok{,}\FloatTok{0.15}\NormalTok{)),}
   \DataTypeTok{stringsAsFactors =}\NormalTok{ T}
 \NormalTok{)}
+
+\CommentTok{#write.csv(dat,'sim-result.csv')}
 \end{Highlighting}
 \end{Shaded}
 
@@ -894,5 +896,8 @@ Survey Link:
 \includegraphics{./screenshot.PNG}
 \caption{Screenshot}
 \end{figure}
+
+The simulation result is here:
+\url{https://github.com/Craymate/Survey-Election/blob/main/sim-result.csv}
 
 \end{document}
